--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <p></p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro reiciendis eveniet perspiciatis molestias eius vel, nesciunt cupiditate placeat dolorem! Totam aspernatur tempora necessitatibus nostrum voluptate repellat. Nam sequi modi velit.
+    <h3>Alert examples in vscode</h3>
+    <strong>Success</strong>Represents a successful or positive action
     
 </body>
 </html>
